# minimum_jerk_relative_move

./: .gitignore  README.md
minimum_jerk_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
minimum_jerk_msgs/action/: Rotate.action  Translate.action
minimum_jerk_relative_move/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py  tests.md
minimum_jerk_relative_move/include/minimum_jerk_relative_move/: minimum_jerk_relative_move.hpp
minimum_jerk_relative_move/launch/: minimum_jerk_relative_move_launch.py
minimum_jerk_relative_move/minimum_jerk_relative_move/: main.py  mathematical_fonctions.py  minimum_jerk_relative_move.py
minimum_jerk_relative_move/params/: minimum_jerk_relative_move.yaml
minimum_jerk_relative_move/src/: minimum_jerk_relative_move.cpp  minimum_jerk_relative_move_node.cpp
minimum_jerk_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
minimum_jerk_ros/include/minimum_jerk_ros/: fill_file.hpp  minimum_jerk_ros.hpp
minimum_jerk_ros/launch/: minimum_jerk_launch.py
minimum_jerk_ros/params/: minimu_jerk_params.yaml  minimum_jerk_params.yaml
minimum_jerk_ros/src/: minimum_jerk_ros.cpp  minimum_jerk_ros_node.cpp
minimum_jerk_ros/test/: CMakeLists.txt  collision_checker_mock_test.cpp  ros_node_test_collision.cpp  ros_node_test_rot.cpp  ros_node_test_trans.cpp
minimum_jerk_ros/test/include/minimum_jerk_ros_test/: collision_checker_server_mock.hpp
minimum_jerk_trajectory_planner/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
minimum_jerk_trajectory_planner/include/minimum_jerk_trajectory_planner/: acceleration.hpp  acceleration.hpp.gch  pose.hpp  robot.hpp  trajectory.hpp  trajectory_planners.hpp  velocity.hpp
minimum_jerk_trajectory_planner/minimum_jerk_trajectory_planner/: Pose.py  Robot.py  main.py  simulation.py
minimum_jerk_trajectory_planner/ressources/: accelerations.txt  accelerations_rot.txt  graph.py  graph_1_value.py  graph_2_values.py  graph_acc_vel_pos.py  poses.txt  poses_rot.txt  velocities.txt  velocities_rot.txt
minimum_jerk_trajectory_planner/src/: acceleration.cpp  main.cpp  pose.cpp  robot.cpp  trajectory.cpp  trajectory_planners.cpp  velocity.cpp
minimum_jerk_trajectory_planner/test/: CMakeLists.txt  library_test_rot.cpp  library_test_trans.cpp
