<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>minimum_jerk_relative_move</name>
  <version>0.0.1</version>
  <description>Controller to minimixe the jerk</description>
  <maintainer email="clara.dieudonne@cm-robotics.com">Clara Dieudonné</maintainer>
  <license>Apache Licence 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <depend>minimum_jerk_msgs</depend>
  <depend>minimum_jerk_ros</depend>
  <depend>minimum_jerk_trajectory_planner</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>