<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>minimum_jerk_trajectory_planner</name>
  <version>1.0.0</version>
  <description>Lib for minimize jerk</description>
  <maintainer email="clara.dieudonne@cm-robotics.com">Clara Dieudonné</maintainer>
  <license>Apache Licence 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>  
  <depend>rclcpp_lifecycle</depend>
  <depend>tf2_geometry_msgs</depend>  
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>cmr_tests_utils</test_depend>
  <test_depend>cmr_clients_utils</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>